fix(APIKeyModal): deprecated props and added style for success message

--- a/packages/ibm-products-styles/src/components/APIKeyModal/_api-key-modal.scss
+++ b/packages/ibm-products-styles/src/components/APIKeyModal/_api-key-modal.scss
@@ -50,3 +50,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--apikey-modal;
 .#{$block-class}__error-icon svg {
   fill: $button-danger-primary;
 }
+
+.#{$block-class}__checkmark-icon {
+  fill: $button-primary;
+}
