--- a/packages/ibm-products-styles/src/components/PageHeader/_carbon-imports.scss
+++ b/packages/ibm-products-styles/src/components/PageHeader/_carbon-imports.scss
@@ -8,6 +8,6 @@
 // PageHeader uses the following Carbon components:
 // BreadcrumbItem, Grid, Column, Row, Button, SkeletonText, Tag
 @use '@carbon/react/scss/components/breadcrumb';
-@use '@carbon/react/scss/components/button';
+@use '@carbon/react/scss/components/button/tokens' as button-tokens;
 @use '@carbon/react/scss/components/skeleton-styles';
-@use '@carbon/react/scss/components/tag';
+@use '@carbon/react/scss/components/tag/tokens' as tag-tokens;
