--- a/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
+++ b/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
@@ -247,20 +247,33 @@ $motion-duration: $duration-moderate-02;
   }
 
   .#{$block-class}__header-description {
-    display: -webkit-box;
-    overflow: hidden;
     max-width: 100%;
     margin-top: $spacing-05;
     @include type.type-style('body-compact-01');
-
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-
     @include breakpoint-up('md') {
       max-width: 60%;
     }
 
     word-break: break-word;
+  }
+
+  .#{$block-class}__description-tooltip .#{$carbon-prefix}--definition-term {
+    border-bottom: 0;
+    letter-spacing: inherit;
+    word-break: break-word;
+  }
+
+  // overwrites the existing styles to make the popover bigger because in some cases the narrow space can be too constricting for the description
+  .#{$block-class}__description-tooltip
+    .#{$carbon-prefix}--popover-content.#{$carbon-prefix}--definition-tooltip {
+    max-inline-size: -webkit-fill-available;
+  }
+
+  .#{$block-class}__description-text {
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
   }
 
   &.#{$block-class}--narrow .#{$block-class}__header-description {
