fix: condition builder style issues

--- a/packages/ibm-products-styles/src/components/ConditionBuilder/_condition-builder.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/_condition-builder.scss
@@ -24,12 +24,6 @@
 // The block part of our conventional BEM class names (blockClass__E--M).
 $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
 
-// .#{$block-class} {
-//   // TODO: Styles.
-// }
-.#{$block-class} {
-  padding: $spacing-06;
-}
 .#{$block-class}__condition-builder__group {
   display: flex;
 }
@@ -52,6 +46,9 @@ $block-class: #{c4p-settings.$pkg-prefix}--condition-builder;
   width: fit-content;
   flex-direction: row;
 }
+// .#{$block-class}__condition-block:hover button:not([data-name="connectorField"]) {
+//  background-color: red;
+// }
 .#{$block-class}__content-container {
   display: flex;
   flex-direction: column;
