--- a/packages/ibm-products-styles/src/components/BigNumbers/_big-numbers.scss
+++ b/packages/ibm-products-styles/src/components/BigNumbers/_big-numbers.scss
@@ -34,7 +34,7 @@ $skeleton-block-class: #{c4p-settings.$pkg-prefix}--big-numbers-skeleton;
 .#{$block-class}__value {
   @include type-style('heading-04');
 
-  margin-bottom: 0;
+  margin-block-end: 0;
 }
 
 .#{$block-class}__total {
@@ -43,8 +43,8 @@ $skeleton-block-class: #{c4p-settings.$pkg-prefix}--big-numbers-skeleton;
 
 .#{$block-class}__total,
 .#{$block-class}__percentage-mark {
-  margin-top: auto;
-  margin-bottom: $spacing-02;
+  margin-block-end: $spacing-02;
+  margin-block-start: auto;
 }
 
 .#{$block-class}__info {
@@ -52,7 +52,7 @@ $skeleton-block-class: #{c4p-settings.$pkg-prefix}--big-numbers-skeleton;
 }
 
 .#{$block-class}__trend {
-  margin-top: $spacing-03;
+  margin-block-start: $spacing-03;
   vertical-align: top;
 }
 
@@ -61,7 +61,7 @@ $skeleton-block-class: #{c4p-settings.$pkg-prefix}--big-numbers-skeleton;
 }
 
 .#{$block-class}__info {
-  padding-left: $spacing-03;
+  padding-inline-start: $spacing-03;
 }
 
 .#{$block-class}__percentage {
@@ -70,6 +70,10 @@ $skeleton-block-class: #{c4p-settings.$pkg-prefix}--big-numbers-skeleton;
 
 .#{$block-class}__percentage-mark {
   @include type-style('body-compact-01');
+}
+
+.#{$block-class}__icon-button {
+  margin-inline-start: $spacing-02;
 }
 
 .#{$block-class}--lg .#{$block-class}__value,
@@ -97,8 +101,12 @@ $skeleton-block-class: #{c4p-settings.$pkg-prefix}--big-numbers-skeleton;
 }
 
 .#{$block-class}--xl .#{$block-class}__trend {
-  margin-top: $spacing-04;
+  margin-block-start: $spacing-04;
 }
+
+//
+// Skeleton
+//
 
 .#{$skeleton-block-class} {
   width: 4rem;
@@ -106,8 +114,8 @@ $skeleton-block-class: #{c4p-settings.$pkg-prefix}--big-numbers-skeleton;
 
 .#{$skeleton-block-class}__label {
   height: $spacing-04;
-  margin-top: 0;
-  margin-bottom: $spacing-03;
+  margin-block-end: $spacing-03;
+  margin-block-start: 0;
 }
 
 .#{$skeleton-block-class}__value {
