fix: carbon style imports

--- a/packages/ibm-products-web-components/.storybook/templates/with-layer.scss
+++ b/packages/ibm-products-web-components/.storybook/templates/with-layer.scss
@@ -5,13 +5,13 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@use '@carbon/react/scss/colors';
-@use '@carbon/react/scss/theme';
-@use '@carbon/react/scss/spacing';
-@use '@carbon/react/scss/type';
-@use '@carbon/react/scss/components/tag';
+@use '@carbon/styles/scss/colors';
+@use '@carbon/styles/scss/theme';
+@use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/type';
+@use '@carbon/styles/scss/components/tag';
 
-@use '@carbon/react/scss/config' as *;
+@use '@carbon/styles/scss/config' as *;
 
 .#{$prefix}--with-layer__layer {
   position: relative;
