--- a/packages/ibm-products-web-components/.storybook/_container.scss
+++ b/packages/ibm-products-web-components/.storybook/_container.scss
@@ -8,14 +8,14 @@
 //
 
 @use '@carbon/styles';
-@use '@carbon/react/scss/config' as *;
+@use '@carbon/styles/scss/config' as *;
 @use '@carbon/themes/scss/themes';
-@use '@carbon/react/scss/theme';
+@use '@carbon/styles/scss/theme';
 @use '@carbon/grid';
 
-@use '@carbon/react/scss/components/button/tokens' as button-tokens;
-@use '@carbon/react/scss/components/notification/tokens' as notification-tokens;
-@use '@carbon/react/scss/components/tag/tokens' as tag-tokens;
+@use '@carbon/styles/scss/components/button/tokens' as button-tokens;
+@use '@carbon/styles/scss/components/notification/tokens' as notification-tokens;
+@use '@carbon/styles/scss/components/tag/tokens' as tag-tokens;
 @include theme.add-component-tokens(button-tokens.$button-tokens);
 @include theme.add-component-tokens(notification-tokens.$notification-tokens);
 @include theme.add-component-tokens(tag-tokens.$tag-tokens);
