--- a/packages/ibm-products-web-components/src/components/tearsheet/tearsheet.scss
+++ b/packages/ibm-products-web-components/src/components/tearsheet/tearsheet.scss
@@ -8,17 +8,17 @@
 $css--plex: true !default;
 
 /* Other Carbon settings. */
-@use '@carbon/react/scss/reset';
-@use '@carbon/react/scss/breakpoint' as *;
-@use '@carbon/react/scss/config' as *;
-@use '@carbon/react/scss/motion' as *;
-@use '@carbon/react/scss/spacing' as *;
-@use '@carbon/react/scss/theme' as *;
-@use '@carbon/react/scss/type';
-@use '@carbon/react/scss/utilities';
-@use '@carbon/react/scss/utilities/ai-gradient' as *;
-@use '@carbon/react/scss/components/modal' as *;
-@use '@carbon/react/scss/utilities/convert' as *;
+@use '@carbon/styles/scss/reset';
+@use '@carbon/styles/scss/breakpoint' as *;
+@use '@carbon/styles/scss/config' as *;
+@use '@carbon/styles/scss/motion' as *;
+@use '@carbon/styles/scss/spacing' as *;
+@use '@carbon/styles/scss/theme' as *;
+@use '@carbon/styles/scss/type';
+@use '@carbon/styles/scss/utilities';
+@use '@carbon/styles/scss/utilities/ai-gradient' as *;
+@use '@carbon/styles/scss/components/modal' as *;
+@use '@carbon/styles/scss/utilities/convert' as *;
 @use 'sass:map';
 
 $prefix: 'c4p';
