--- a/examples/carbon-for-ibm-products/Cascade/src/Example/_example.scss
+++ b/examples/carbon-for-ibm-products/Cascade/src/Example/_example.scss
@@ -2,8 +2,8 @@
 
 .box {
   display: inline-block;
-  width: 150px;
-  height: 150px;
+  inline-size: 150px;
+  block-size: 150px;
   // stylelint-disable-next-line carbon/layout-use
   margin: 1rem;
   // stylelint-disable-next-line carbon/theme-use
