--- a/examples/carbon-for-ibm-products/ProductiveCard/src/Example/_example.scss
+++ b/examples/carbon-for-ibm-products/ProductiveCard/src/Example/_example.scss
@@ -6,8 +6,8 @@
 }
 
 .graph {
-  width: 200px;
-  height: 100px;
+  inline-size: 200px;
+  block-size: 100px;
   border: 10px solid $support-error;
   border-right-color: $support-success;
   border-bottom: 0;
@@ -20,5 +20,5 @@
   position: fixed;
   bottom: $spacing-05;
   left: $spacing-05;
-  min-width: 11.5rem;
+  min-inline-size: 11.5rem;
 }
