--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_useStickyColumn.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_useStickyColumn.scss
@@ -12,42 +12,42 @@
 .#{variables.$block-class}__right-sticky-column-cell {
   /* stylelint-disable-next-line declaration-no-important */
   position: sticky !important;
-  right: 0;
   display: flex;
   align-items: center;
-  border-left: 1px solid $border-subtle;
+  border-inline-start: 1px solid $border-subtle;
+  inset-inline-end: 0;
 }
 
 .#{variables.$block-class}__right-sticky-column-header {
   /* stylelint-disable-next-line declaration-no-important */
   position: sticky !important;
-  right: 0;
+  inset-inline-end: 0;
 }
 
 .#{variables.$block-class}__left-sticky-column-cell {
   /* stylelint-disable-next-line declaration-no-important */
   position: sticky !important;
-  left: 0;
   display: flex;
   align-items: center;
-  border-right: 1px solid $border-subtle;
+  border-inline-end: 1px solid $border-subtle;
+  inset-inline-start: 0;
 }
 
 .#{variables.$block-class}__left-sticky-column-header {
   /* stylelint-disable-next-line declaration-no-important */
   position: sticky !important;
   z-index: 10;
-  left: 0;
-  border-right: 1px solid $border-subtle;
+  border-inline-end: 1px solid $border-subtle;
+  inset-inline-start: 0;
 }
 
 .#{variables.$block-class}__right-sticky-column-header {
-  border-left: 1px solid $border-subtle;
+  border-inline-start: 1px solid $border-subtle;
 }
 
 .#{variables.$block-class}__left-sticky-column-cell.#{variables.$block-class}__left-sticky-column-cell--with-extra-select-column,
 .#{variables.$block-class}__left-sticky-column-header.#{variables.$block-class}__left-sticky-column-header--with-extra-select-column {
-  left: $spacing-09;
+  inset-inline-start: $spacing-09;
 }
 
 .#{variables.$block-class}__sticky-noShadow {
@@ -62,11 +62,11 @@
 
 .#{variables.$block-class}__right-sticky-column-offset-scroll {
   /* stylelint-disable-next-line */
-  right: 6px !important; // offset the vertical scroll bar in the table body
+  inset-inline-end: 6px !important; // offset the vertical scroll bar in the table body
 }
 
 .#{variables.$block-class}__select-all-toggle-on.#{variables.$block-class}__select-all-sticky-left {
   position: sticky;
   z-index: 10;
-  left: 0;
+  inset-inline-start: 0;
 }
