--- a/packages/ibm-products-styles/src/components/Datagrid/styles/addons/_CustomizeColumnsTearsheet.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/addons/_CustomizeColumnsTearsheet.scss
@@ -26,9 +26,9 @@
 
 .#{variables.$block-class}__customize-columns-tearsheet--actions
   input[role='searchbox'] {
-  height: spacing.$spacing-09;
-  padding-left: spacing.$spacing-09;
-  border-bottom: 1px solid $background-active;
+  block-size: spacing.$spacing-09;
+  border-block-end: 1px solid $background-active;
+  padding-inline-start: spacing.$spacing-09;
 }
 
 .#{c4p-settings.$carbon-prefix}--form-item.#{c4p-settings.$carbon-prefix}--checkbox-wrapper.#{variables.$block-class}__customize-columns-checkbox {
@@ -42,12 +42,12 @@
   .#{variables.$block-class}__customize-columns-checkbox-visible-label {
   // Disabling linter only to match the spacing that Carbon uses for the Checkbox label
   /* stylelint-disable-next-line */
-  padding-left: convert.to-rem(6px);
+  padding-inline-start: convert.to-rem(6px);
 }
 
 .#{variables.$block-class}__customize-columns-column-list
   .#{variables.$block-class}__customize-columns-checkbox-wrapper.#{c4p-settings.$carbon-prefix}--form-item {
-  margin-bottom: 0;
+  margin-block-end: 0;
 }
 
 .#{variables.$block-class}__customize-columns-column-list {
@@ -63,12 +63,12 @@
 .#{variables.$block-class}__customize-columns-select-all--selected {
   position: sticky;
   z-index: 1;
-  top: 0;
   display: flex;
-  height: spacing.$spacing-09;
-  padding-left: spacing.$spacing-08;
-  border-bottom: 1px solid $layer-active;
   background-color: $layer;
+  block-size: spacing.$spacing-09;
+  border-block-end: 1px solid $layer-active;
+  inset-block-start: 0;
+  padding-inline-start: spacing.$spacing-08;
 
   .#{c4p-settings.$carbon-prefix}--checkbox-label-text {
     @include font-family.font-weight('semibold');
