refactor(borders): implements css logical props and adds stylelint rule

--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
@@ -433,6 +433,7 @@
 
   .#{c4p-settings.$carbon-prefix}--select-input {
     -webkit-appearance: none; // could be fixed by post-css plugin
+    appearance: none;
   }
 
   th.#{c4p-settings.$carbon-prefix}--table-column-checkbox {
