--- a/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
+++ b/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
@@ -260,7 +260,7 @@ $motion-duration: $duration-moderate-02;
   }
 
   .#{$block-class}__description-tooltip .#{$carbon-prefix}--definition-term {
-    border-bottom: 0;
+    border-block-end: 0;
     letter-spacing: inherit;
     word-break: break-word;
   }
