--- a/packages/ibm-products-styles/src/components/Datagrid/styles/addons/_RowSizeDropdown.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/addons/_RowSizeDropdown.scss
@@ -17,7 +17,8 @@
 }
 
 .#{variables.$block-class}
-  .#{variables.$block-class}__row-size-radio-button
+  .#{variables.$block-class}__row-s
+  ize-radio-button
   .#{c4p-settings.$carbon-prefix}--radio-button__label {
   color: $text-primary;
 }
