--- a/packages/ibm-products-styles/src/components/CreateTearsheet/_create-tearsheet.scss
+++ b/packages/ibm-products-styles/src/components/CreateTearsheet/_create-tearsheet.scss
@@ -42,6 +42,8 @@ $tearsheet-fieldset-class: #{c4p-settings.$pkg-prefix}--tearsheet-create__step--
 .#{$create-tearsheet-block-class} .#{$step-block-class}__step--visible-step {
   // stylelint-disable-next-line carbon/motion-easing-use
   animation: step-content-entrance $duration-slow-01;
+  padding-inline-start: $spacing-03;
+
   animation-fill-mode: forwards;
   animation-timing-function: $standard-easing;
 
