--- a/examples/carbon-for-ibm-products/StatusIcon/src/Example/_example.scss
+++ b/examples/carbon-for-ibm-products/StatusIcon/src/Example/_example.scss
@@ -9,14 +9,14 @@
 
 .ccs-status-dropdown {
   position: fixed;
-  top: $spacing-05;
+  inset-block-start: $spacing-05;
   left: $spacing-05;
   min-inline-size: 11.5rem;
 }
 
 .example__status-icon {
   position: fixed;
-  top: 50%;
+  inset-block-start: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
