fix: component token style import (#6710)
* fix: component token style import

* fix: tokens

* fix: carbon style import updates

* fix: year

--- a/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderItem.scss
+++ b/packages/ibm-products-styles/src/components/ConditionBuilder/styles/_conditionBuilderItem.scss
@@ -15,7 +15,7 @@
 @use '@carbon/react/scss/utilities';
 @use '@carbon/react/scss/motion' as *;
 @use '@carbon/react/scss/utilities/focus-outline';
-@use '@carbon/styles/scss/components/tag';
+@use '@carbon/styles/scss/components/tag/tokens' as *;
 
 @use '@carbon/styles/scss/type' as *;
 @use '@carbon/react/scss/colors' as *;
