refactor(position): implements css logical props -- bottom only

--- a/examples/carbon-for-ibm-products/example-gallery/src/ThemeSelector/_theme-dropdown.scss
+++ b/examples/carbon-for-ibm-products/example-gallery/src/ThemeSelector/_theme-dropdown.scss
@@ -21,7 +21,7 @@
 
 .carbon-theme-dropdown {
   position: fixed;
-  bottom: 1rem; // stylelint-disable-line carbon/layout-use
+  inset-block-end: 1rem; // stylelint-disable-line carbon/layout-use
   left: 1rem; // stylelint-disable-line carbon/layout-use
   min-inline-size: 11.5rem;
 }
