--- a/examples/carbon-for-ibm-products/StatusIcon/src/Example/_example.scss
+++ b/examples/carbon-for-ibm-products/StatusIcon/src/Example/_example.scss
@@ -2,7 +2,7 @@
 
 .ccs-theme-dropdown {
   position: fixed;
-  bottom: $spacing-05;
+  inset-block-end: $spacing-05;
   left: $spacing-05;
   min-inline-size: 11.5rem;
 }
