--- a/examples/carbon-for-ibm-products/example-gallery/src/ThemeSelector/_theme-dropdown.scss
+++ b/examples/carbon-for-ibm-products/example-gallery/src/ThemeSelector/_theme-dropdown.scss
@@ -22,8 +22,8 @@
 .carbon-theme-dropdown {
   position: fixed;
   inset-block-end: 1rem; // stylelint-disable-line carbon/layout-use
-  left: 1rem; // stylelint-disable-line carbon/layout-use
   min-inline-size: 11.5rem;
+  inset-inline-start: 1rem; // stylelint-disable-line carbon/layout-use
 }
 
 .carbon-theme-dropdown .#{config.$prefix}--label {
