--- a/examples/carbon-for-ibm-products/ProductiveCard/src/Example/_example.scss
+++ b/examples/carbon-for-ibm-products/ProductiveCard/src/Example/_example.scss
@@ -19,6 +19,6 @@
 .ccs-theme-dropdown {
   position: fixed;
   inset-block-end: $spacing-05;
-  left: $spacing-05;
   min-inline-size: 11.5rem;
+  inset-inline-start: 1rem; // stylelint-disable-line carbon/layout-use
 }
