--- a/examples/carbon-for-ibm-products/SidePanel/src/Example/_example.scss
+++ b/examples/carbon-for-ibm-products/SidePanel/src/Example/_example.scss
@@ -28,7 +28,7 @@
     @include type-style('label-01');
 
     position: absolute;
-    right: 0;
+    inset-inline-end: 0;
     color: $text-secondary;
   }
   .#{config.$prefix}text-area-container
