Revert "refactor(borders): implements css logical props and adds stylelint rule"
This reverts commit 5004f853494df155e337a27cf52a54e53bf40998.

--- a/examples/carbon-for-ibm-products/ProductiveCard/src/Example/_example.scss
+++ b/examples/carbon-for-ibm-products/ProductiveCard/src/Example/_example.scss
@@ -10,7 +10,7 @@
   block-size: 100px;
   border: 10px solid $support-error;
   border-right-color: $support-success;
-  border-block-end: 0;
+  border-bottom: 0;
   margin: 0 auto $spacing-05;
   border-top-left-radius: 110px;
   border-top-right-radius: 110px;
