refactor: also adds overflows

--- a/packages/ibm-products-styles/src/components/AddSelect/_add-select.scss
+++ b/packages/ibm-products-styles/src/components/AddSelect/_add-select.scss
@@ -199,7 +199,7 @@ $tearsheet-class: #{$pkg-prefix}--tearsheet;
   display: flex;
   flex-direction: row;
   flex-grow: 1;
-  overflow-x: auto;
+  overflow-inline: auto;
 
   .#{$block-class}__selections-form-control-label-wrapper {
     margin-inline-start: $spacing-03;
