--- a/packages/ibm-products-styles/src/components/ComboButton/_combo-button.scss
+++ b/packages/ibm-products-styles/src/components/ComboButton/_combo-button.scss
@@ -17,7 +17,7 @@
 
 .#{c4p-settings.$pkg-prefix}--combo-button__action {
   display: block;
-  overflow-x: hidden;
+  overflow-inline: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
