--- a/packages/ibm-products-styles/src/components/CreateInfluencer/_create-influencer.scss
+++ b/packages/ibm-products-styles/src/components/CreateInfluencer/_create-influencer.scss
@@ -48,7 +48,7 @@ $influencerAnimationStart: calc(-1 * #{$spacing-05});
 .#{$influencer-block-class}__left-nav {
   grid-column: 1 / -1;
   grid-row: 1 / -1;
-  overflow-y: auto;
+  overflow-block: auto;
 }
 
 .#{$influencer-block-class}__title {
