--- a/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-search.scss
+++ b/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-search.scss
@@ -33,5 +33,5 @@ $block-class: #{c4p-settings.$pkg-prefix}--filter-panel-search;
   inset-inline: 0;
   /* stylelint-disable-next-line function-no-unknown */
   max-block-size: to-rem(320px);
-  overflow-y: auto;
+  overflow-block: auto;
 }
