--- a/packages/ibm-products/src/components/Guidebanner/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/Guidebanner/_storybook-styles.scss
@@ -5,7 +5,7 @@
 // LICENSE file in the root directory of this source tree.
 //
 #storybook-root {
-  overflow-x: hidden;
+  overflow-inline: hidden;
 }
 
 // The layout has been changed from middle/center to top/left, because
