--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_useNestedTable.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_useNestedTable.scss
@@ -16,7 +16,7 @@
   border-inline-start: 2px solid $background-brand;
   inline-size: calc(100% - #{$spacing-07});
   margin-inline-start: $spacing-07;
-  overflow-x: hidden;
+  overflow-inline: hidden;
 
   tr.#{variables.$block-class}__carbon-nested-row {
     border-inline-start: none;
