--- a/packages/ibm-products-styles/src/components/ScrollGradient/_scroll-gradient.scss
+++ b/packages/ibm-products-styles/src/components/ScrollGradient/_scroll-gradient.scss
@@ -12,6 +12,7 @@
 @use '@carbon/styles/scss/spacing' as *;
 
 $block-class: #{c4p-settings.$pkg-prefix}--scroll-gradient;
+$intersection-value: 3rem;
 
 .#{$block-class} {
   position: relative;
@@ -22,14 +23,22 @@ $block-class: #{c4p-settings.$pkg-prefix}--scroll-gradient;
   inline-size: inherit;
 }
 .#{$block-class}__content {
+  display: grid;
   overflow: auto;
   block-size: inherit;
+  grid-template-columns: 1fr;
   inline-size: 100%;
 }
 
 .#{$block-class}__content-children {
   block-size: 100%;
+  grid-column-start: 1;
+  grid-row-start: 1;
   inline-size: 100%;
+}
+
+.#{$block-class}__content-children > * {
+  grid-area: 1 / 1;
 }
 // All gradients
 .#{$block-class}__start-vertical,
@@ -99,4 +108,25 @@ $block-class: #{c4p-settings.$pkg-prefix}--scroll-gradient;
 .#{$block-class}--x-started.#{$block-class}--x-scrollable
   .#{$block-class}__end-horizontal {
   display: block;
+}
+
+.#{$block-class} [data-start-vertical],
+.#{$block-class} [data-end-vertical] {
+  block-size: $intersection-value;
+  grid-column-start: 1;
+  grid-row-start: 1;
+  inline-size: 100%;
+}
+
+.#{$block-class} [data-end-vertical],
+.#{$block-class} [data-end-horizontal] {
+  place-self: flex-end;
+}
+
+.#{$block-class} [data-start-horizontal],
+.#{$block-class} [data-end-horizontal] {
+  block-size: 100%;
+  grid-column-start: 1;
+  grid-row-start: 1;
+  inline-size: $intersection-value;
 }
